rearrange sass files & folders

--- a/assets/sass/components/_date-filter.scss
+++ b/assets/sass/components/_date-filter.scss
@@ -11,7 +11,7 @@
             width: 100%;
             font-size: 17px;
             margin: 0 0 15px 0;
-            color: #004B80;
+            color: $darkblue;
             text-align: center;
         }
     }
@@ -26,7 +26,7 @@
     }
 
     .year-select {
-        background: #A3A09C;
+        background: $taupe;
         text-align: center;
         border: none;
         margin: 7px 5px;
@@ -83,7 +83,7 @@
 
 .year-select, .filter-buttons, .quarters p {
     &:active, &:hover, &:focus {
-        background: #E6AC5C;
+        background: $orange;
         box-shadow: none;
         cursor: pointer;
         text-shadow: none;
@@ -92,7 +92,7 @@
 
 .year-select {
     &:active, &:hover, &:focus {
-        background: #004B80;
+        background: $darkblue;
     }
 }
 
@@ -105,7 +105,7 @@
     font-weight: 600;
     font-size: 16px;
     cursor: pointer;
-    background: #004B80;
+    background: $darkblue;
     color: #fff;
     height: 27px;
     width: 85px;
@@ -118,7 +118,7 @@
     display: none;
     font-size: 20px;
     font-weight: 700;
-    color: #E6AC5C;
+    color: $orange;
     text-align: center;
     margin-top: -26px;
     width: 85%;
