--- a/assets/sass/layout/_nav.scss
+++ b/assets/sass/layout/_nav.scss
@@ -96,7 +96,7 @@
 
     &:hover {
         background: rgba(70,70,85,0.9);
-        border-bottom: solid 2px #004B80;
+        border-bottom: solid 2px $darkblue;
         color: #fab047;
     }
 }
