--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,241 +1,20 @@
-@import 'nav';
-@import 'calendar';
-@import 'previews';
-@import 'single-page';
-@import 'list-page';
-@import 'pagination';
-@import 'date-filter';
-@import 'residency';
-@import 'support';
 @import 'variables';
+@import 'normalize';
+@import 'base';
 
-* {
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-}
+@import 'media-queries';
 
-body {
-    background: -webkit-gradient(linear, left top, right top, color-stop(90%, #B3B0AB), to(#8C8A86));
-    background: linear-gradient(to right, #B3B0AB 90%, #8C8A86);
-    font-family: 'Cairo', sans-serif;
-    color: #000;
-    // padding-top: 3px;
-}
+@import 'layout/nav';
+@import 'layout/header';
+@import 'layout/primary-copy';
 
-h1 {
-    font-size: 26px;
-    margin: 10px 0 20px 0;
-    text-transform: uppercase;
-    font-weight: 700;
-}
+@import 'components/date-filter';
+@import 'components/pagination';
+@import 'components/calendar';
+@import 'components/previews';
 
-h2,
-h3,
-h4,
-h5 {
-    margin: 0;
-    font-weight: 600;
-}
-
-a {
-    color: #004B80;
-    text-decoration: underline;
-}
-
-a:hover {
-    color: #ECAD55;
-}
-
-strong {
-    font-weight: 700;
-    color: #00406D;
-}
-
-.triangle {
-    width: 0;
-    height: 0;
-    border-style: solid;
-}
-
-.container-primary {
-    background: #fff;
-    width: 95%;
-    max-width: 1500px;
-    height: auto;
-    min-height: 100vh;
-    margin: 3px auto 15px auto;
-    padding: 32px 55px 50px 40px;
-    position: relative;
-    left: 5px;
-}
-
-.grid {
-    display: grid;
-    justify-items: start;
-    -webkit-box-align: start;
-    -ms-flex-align: start;
-    align-items: start;
-
-    section {
-        justify-self: stretch;
-        -ms-flex-item-align: stretch;
-        align-self: stretch;
-    }
-}
-
-.grid-home {
-    grid-template-columns: 60% auto;
-    grid-template-rows: auto;
-    grid-gap: 35px;
-    grid-template-areas:
-        "header sidebar"
-        "primary sidebar"
-        "primary calendar"
-        "primary info";
-}
-
-.social-links {
-    position: absolute;
-    right: 20px;
-    top: 15px;
-    z-index: 500;
-    background: #fff;
-    padding-top: 2px;
-    height: 52px;
-    width: 165px;
-
-    img {
-        height: 34px;
-        width: 34px;
-        margin: 0 12px 0 0;
-    }
-
-    img:hover {
-        -webkit-filter: brightness(1.5) hue-rotate(180deg);
-        filter: brightness(1.5) hue-rotate(180deg);
-    }
-
-    .triangle {
-        border-width: 0 121px 52px 0;
-        border-color: transparent #fff transparent transparent;
-        position: absolute;
-        top: 0;
-        right: 165px;
-    }
-
-}
-
-/* ===== HEADER SECTION ===== */
-
-.header {
-    grid-area: header;
-    position: relative;
-    background: #B3B0AB;
-    color: #fff;
-    text-transform: uppercase;
-    width: calc(100% + 40px);
-    left: -40px;
-}
-
-/* ===== HEADER ===== */
-
-.header_image-home {
-    width: calc(100% - 40px);
-    margin-left: 40px;
-    margin-bottom: -3px;
-}
-
-.triangle-punch-out {
-    border-width: 18px 42px 0 0;
-    border-color: #B3B0AB transparent transparent transparent;
-    position: absolute;
-}
-
-.tagline {
-    position: absolute;
-    left: 40px;
-    bottom: 0;
-    height: 32px;
-    width: calc(100% - 40px);
-    font-size: 13px;
-    font-weight: 400;
-    letter-spacing: 0.05em;
-    color: #d5d8dd;
-    padding: 9px 0 0 15px;
-    background: -webkit-gradient(linear, left top, right top, from(rgba(27, 31, 38, 0.65)), color-stop(60%, rgba(27, 31, 38, 0)));
-    background: linear-gradient(to right, rgba(27, 31, 38, 0.65), rgba(27, 31, 38, 0) 60%);
-    text-transform: uppercase;
-    border-top: solid 1px rgba(179, 176, 171, 0.3);
-}
-
-.carousel-control {
-    height: 25px;
-    position: absolute;
-    bottom: 0;
-    right: 10px;
-}
-
-.carousel-control_dot {
-    display: inline-block;
-    height: 12px;
-    width: 12px;
-    border-radius: 50%;
-    margin-right: 20px;
-    border: solid 1px #B3B3B3;
-}
-
-
-/* -- MAKE INTERACTIVE w JS -- */
-
-.carousel-control_dot:first-of-type {
-    background: #fff;
-}
-
-/* .carousel-control_dot:active {
-    background: #fff;
-} */
-
-
-/* ===== PRIMARY COPY SECTION ===== */
-
-.copy-primary {
-    grid-area: primary;
-    background: #F7F5F0;
-    padding: 30px 45px 50px 45px;
-    position: relative;
-
-    h1, h2 {
-        color: #00406D;
-        margin: 0;
-    }
-
-    h1 {
-        font-size: 30px;
-    }
-    .copy-primary_content {
-        clear: both;
-        position: relative;
-        font-size: 18px;
-        line-height: 1.4;
-        font-weight: 400;
-        margin-top: 20px;
-    }
-}
-
-
-/* ===== ORG-INFO SECTION ===== */
-
-.org-info {
-    grid-area: info;
-    font-size: 17px;
-    width: 90%;
-    line-height: 1.2;
-
-    hr {
-        margin-bottom: 20px;
-    }
-
-    p {
-        margin-bottom: 16px;
-    }
-}
+@import 'pages/home';
+@import 'pages/single';
+@import 'pages/list';
+@import 'pages/residency';
+@import 'pages/support';
