--- a/assets/sass/pages/_residency.scss
+++ b/assets/sass/pages/_residency.scss
@@ -7,7 +7,7 @@
 
     p {
         font-size: 18px;
-        color: #7C95BF;
+        color: $lightblue;
     }
 
     ul {
@@ -42,7 +42,7 @@
     h3 {
         font-size: 18px;
         font-weight: 400;
-        color: #00406D;
+        color: $darkblue;
     }
     
     // p {
