--- a/assets/sass/pages/_list.scss
+++ b/assets/sass/pages/_list.scss
@@ -26,7 +26,7 @@
 
 .subhead_date {
     width: 100%;
-    background: linear-gradient(to right, #7C95BF, rgba(124, 149, 191, 0.2));
+    background: linear-gradient(to right, $lightblue, rgba(124, 149, 191, 0.2));
     color: #eee;
     margin: 10px 0;
     font-weight: 600;
@@ -68,7 +68,7 @@
 
 .project-listing, .artist-listing {
     padding: 20px 10px 0 20px;
-    background: #F7F5F0;
+    background: $beige;
 }
 
 
