--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -6,7 +6,7 @@
 
 @import 'layout/nav';
 @import 'layout/header';
-@import 'layout/primary-copy';
+@import 'layout/page-copy';
 
 @import 'components/date-filter';
 @import 'components/pagination';
