--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -9,12 +9,12 @@
 
     </section>
 
-    <section class="copy-primary">
+    <section class="page-copy">
 
         <h1>{{.Params.title}}</h1>
         <h2>(default list page)</h2>
 
-        <div class="copy-primary_content">{{.Content}}</div>
+        <div class="page-copy_content">{{.Content}}</div>
         <div class="triangle triangle-corner"></div>
         
     </section>
