--- a/layouts/artists/single.html
+++ b/layouts/artists/single.html
@@ -17,35 +17,27 @@
     {{end}}
 
 
-
     <section class="sidebar-previews projects_list">
         <h1>{{$artist}} at Laboratory</h1>
         {{range where .Site.Pages ".Params.type" "projects" }}
-
                 {{ if eq .Params.artist $artist}}
                 {{ partial "project_preview" . }}
                 {{end}}
-
         {{end}}
-
-
     </section>
 
-    <section class="copy-primary artists">
-
-        <h1 class="copy-primary_h1">{{.Params.name}}</h1>
+    <section class="page-copy artists">
+        <h1 class="page-copy_h1">{{.Params.name}}</h1>
         <div class="artist-quarter">{{$.Scratch.Get "quarter"}} {{$year}}</div>
         <img class="artist-pic" src={{.Params.picture}}>
         {{if .Params.artistwebsite}}
-        <p class="artist-website">artist website:  <a href="{{.Params.artistwebsite}}" target="_blank">{{replaceRE "^https?://([^/]+).*" "$1" .Params.artistwebsite}}</a></p>
+            <p class="artist-website">artist website:  <a href="{{.Params.artistwebsite}}" target="_blank">{{replaceRE "^https?://([^/]+).*" "$1" .Params.artistwebsite}}</a></p>
         {{end}}
-        <div class="copy-primary_content">{{.Content}}</div>
-
+        <div class="page-copy_content">{{.Content}}</div>
         <div class="triangle triangle-corner"></div>
         <a class="link_back" href="/artists"><div class="triangle triangle_back"></div>ARTISTS</a>
 
-        {{ partial "pagination" .}}
-        
+        {{ partial "pagination" .}}        
     </section>
 
 {{end}}
