--- a/layouts/contribute/list.html
+++ b/layouts/contribute/list.html
@@ -18,14 +18,14 @@
 
 </section>
 
-<section class="copy-primary support">
+<section class="page-copy support">
 <div class="triangle triangle-corner"></div>
     
     <h1>{{.Params.title}}</h1>
 
     {{range where .Site.Pages ".Params.section" "primary"}}
 
-    <div class="copy-primary_content donate_container">
+    <div class="page-copy_content donate_container">
          
         <div class="donate_info">
             <h2>{{.Title}}</h2>
