--- a/layouts/partials/residency.html
+++ b/layouts/partials/residency.html
@@ -15,10 +15,10 @@
 
 </section>
 
-<section class="copy-primary">
+<section class="page-copy">
 
     <h1>{{.Params.title}}</h1>
-    <div class="copy-primary_content residency-copy">{{.Content}}</div>
+    <div class="page-copy_content residency-copy">{{.Content}}</div>
     <div class="triangle triangle-corner"></div>
 
 
