--- a/layouts/projects/single.html
+++ b/layouts/projects/single.html
@@ -25,9 +25,9 @@
         {{end}}
     </section>
 
-    <section class="copy-primary">
-        <h1 class="copy-primary_h1">{{.Title}}</h1>
-        <h2 class="copy-primary_h2">{{.Params.artist}}</h2>
+    <section class="page-copy">
+        <h1 class="page-copy_h1">{{.Title}}</h1>
+        <h2 class="page-copy_h2">{{.Params.artist}}</h2>
         <img class="project-pic" src={{.Params.image}}>
         <section class="project-info">
 
@@ -53,7 +53,7 @@
 
 
         </section>
-        <div class="copy-primary_content">{{.Content}}</div>
+        <div class="page-copy_content">{{.Content}}</div>
 
         <div class="triangle triangle-corner"></div>
         <a class="link_back" href="/projects"><div class="triangle triangle_back"></div>EVENTS</a>
