--- a/assets/sass/layout/_nav.scss
+++ b/assets/sass/layout/_nav.scss
@@ -12,7 +12,7 @@
 .header_logo {
     width: 200px;
     height: auto;
-    margin-right: 20px;
+    margin-right: 5px;
 }
 
 .header_nav {
@@ -32,17 +32,15 @@
     a {
         color: #fff;
         text-decoration: none;
-    }
 
-    &:hover {
-        color: #deab63;
-    
-        > .triangle_drop-down {
-            border-color: #fff transparent transparent transparent;
+        &:hover {
+            color: saturate($orange, 20%);
+        
+            > .triangle_drop-down {
+                border-color: #fff transparent transparent transparent;
+            }
         }
     }
-
-
 }
 
 .header_nav div {
@@ -65,6 +63,8 @@
 /* ===== SUB-NAV ===== */
 
 .nav_subnav {
+    height: 30px;
+    overflow: hidden;
     opacity: 0;
     position: absolute;
     top: 0;
@@ -75,11 +75,12 @@
     z-index: 100;
 
     &:hover {
+        height: 130px;
         opacity: 1;
+        overflow: visible;
     }
     
 }
-
 
 .subnav_menu-item {
     display: block;
