--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -2,7 +2,7 @@
 
 <body>
 
-    <div class="container-primary">
+    <div class="page-container page-container--base">
 
         {{ partial "social"}}
 
