--- a/layouts/supporters/list.html
+++ b/layouts/supporters/list.html
@@ -17,12 +17,12 @@
 
 </section>
 
-<section class="copy-primary">
+<section class="page-copy">
     <div class="triangle triangle-corner"></div>
     
     <h1>Thank you to Our Sponsors</h1>
 
-    <div class="copy-primary_content">
+    <div class="page-copy_content">
 
     {{range where .Site.Pages ".Params.type" "supporters"}}
         {{ if .Params.name}}
