--- a/layouts/index.html
+++ b/layouts/index.html
@@ -30,7 +30,7 @@
             
             <section class="page-copy">
                 <div class="triangle triangle-corner"></div>
-                    <h1 class="page-copy_h1">What We Do</h1>
+                    <h1>What We Do</h1>
                     <div class="page-copy_content">
                         <p>Tempor laboris in dolore Lorem excepteur ipsum consectetur. Non nostrud incididunt commodo dolor
                             velit reprehenderit eiusmod quis dolore aliqua ut quis. Elit aliqua quis ipsum sunt amet
