--- a/layouts/projects/single.html
+++ b/layouts/projects/single.html
@@ -26,8 +26,8 @@
     </section>
 
     <section class="page-copy">
-        <h1 class="page-copy_h1">{{.Title}}</h1>
-        <h2 class="page-copy_h2">{{.Params.artist}}</h2>
+        <h1>{{.Title}}</h1>
+        <h2>{{.Params.artist}}</h2>
         <img class="project-pic" src={{.Params.image}}>
         <section class="project-info">
 
