--- a/assets/sass/layout/_page-copy.scss
+++ b/assets/sass/layout/_page-copy.scss
@@ -14,6 +14,8 @@
 
     h1 {
         font-size: 30px;
+        // 85px is width of white corner triangle cut out from page-copy background.
+        width: calc(95% - 85px);
     }
 
     h2 {
