--- a/assets/sass/pages/_single.scss
+++ b/assets/sass/pages/_single.scss
@@ -123,16 +123,17 @@
 }
 
 .artist-quarter {
+    display: block;
     height: 30px;
+    width: 175px;
+    padding-top: 3px;
+    margin-top: 10px;
     background: $orange;
     color: #fff;
     font-weight: 700;
-    display: inline-block;
     font-size: 20px;
-    padding: 2px 15px 0 14px;
-    margin-left: 20px;
+    text-align: center;
     position: relative;
-    top: -3px;
     text-transform: uppercase;
 }
 
