--- a/assets/sass/pages/_list.scss
+++ b/assets/sass/pages/_list.scss
@@ -108,7 +108,7 @@
     margin-bottom: 15px;
 }
 
-.list-page_summary {
+.artist-project-summary {
     display: inline-block;
     font-size: 17px;
     line-height: 1.4;
