--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -3,7 +3,7 @@
 <!-- DEFAULT LIST PAGE -->
 <!-- Nav, Social, and Header pic are in baseof -->
 
-    <section class="sidebar-previews projects_list">
+    <section class="sidebar">
         
         <h1>{{.Params.sidebar}}</h1>
 
