--- a/layouts/contribute/list.html
+++ b/layouts/contribute/list.html
@@ -3,7 +3,7 @@
 <!-- CONTRIBUTE SINGLE PAGE (Design based on Single template, functions as List)-->
 <!-- Nav, Social, and Header pic are in baseof -->
 
-<section class="sidebar-previews support">    
+<section class="sidebar support">    
 
         {{range where .Pages ".Params.type" "volunteer"}} 
             <h1>{{.Title}}</h1>  
