--- a/layouts/partials/artist_listings.html
+++ b/layouts/partials/artist_listings.html
@@ -28,7 +28,7 @@
                         <section class="list_block artist-listing">
                                 <h2 class="artist-name"><a href="{{.URL}}">{{.Params.name}}</h2></a>
                                 <img class="artist-pic" src={{.Params.picture}}>
-                                <p class="list-page_summary">{{.Summary | truncate 200 }}</p>
+                                <p class="artist-project-summary">{{.Summary | truncate 200 }}</p>
                                 <a class="preview_link-more" href="{{.URL}}">more</a>
                         </section>
                 {{end}}
