--- a/layouts/partials/project_preview.html
+++ b/layouts/partials/project_preview.html
@@ -22,7 +22,7 @@
         <p class="projects_preview_address">{{.Params.address}}</p>
         </div>
 
-        <p class="list-page_summary">{{.Summary | truncate 160 }}</p>
+        <p class="artist-project-summary">{{.Summary | truncate 160 }}</p>
 
         <a class="preview_link-more" href="{{.URL}}">more</a>
 
