--- a/layouts/supporters/list.html
+++ b/layouts/supporters/list.html
@@ -3,7 +3,7 @@
 <!-- SUPPORTERS PAGE (Design based on Single template, functions as List)-->
 <!-- Nav, Social, and Header pic are in baseof -->
 
-<section class="sidebar-previews">        
+<section class="sidebar">        
 
         <h1>{{.Title}}</h1>
 
