--- a/assets/sass/_media-queries.scss
+++ b/assets/sass/_media-queries.scss
@@ -2,7 +2,7 @@
 
 @media (max-width: 1300px) {
     .page-container--home {
-        .sidebar-previews {
+        .sidebar {
             margin-top: 30px;
         }
     }
