--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -3,7 +3,7 @@
 <!-- DEFAULT SINGLE PAGE -->
 <!-- Nav, Social, and Header pic are in baseof -->
 
-    <section class="sidebar-previews projects_list">        
+    <section class="sidebar">        
 
     <h1>sidebar section</h1>
 
