--- a/layouts/index.html
+++ b/layouts/index.html
@@ -46,7 +46,7 @@
                     </div>
                 </section>
 
-            <section class="sidebar-previews projects_list">
+            <section class="sidebar">
 
                     <h1>Upcoming Projects</h1>
                     {{ $.Scratch.Set "previewCount" 0}}
