--- a/layouts/projects/single.html
+++ b/layouts/projects/single.html
@@ -2,7 +2,7 @@
 <!-- PROJECTS - SINGLE TEMPLATE -->
 <!-- Nav, Social, and Header pic are in baseof -->
 
-    <section class="sidebar-previews projects_list">
+    <section class="sidebar">
 
         <h1>Upcoming Projects</h1>
 
