--- a/assets/sass/_media-queries.scss
+++ b/assets/sass/_media-queries.scss
@@ -6,9 +6,15 @@
             margin-top: 30px;
         }
     }
+
 }
 
-@media (max-width: 1025px) {
+@media (max-width: 1100px) {
+    /* GO TO DIFFERENT NAV LAYOUT HERE */
+    // .header_nav_menu-item {
+    //     border: solid 1px orange;
+    // }
+
     .page-container--home {
         .grid--home {
             grid-template-areas:
@@ -28,14 +34,7 @@
     .org-info {
         width: 100% !important;
     }
-}
 
-
-@media (max-width: 1005px) {
-    /* GO TO DIFFERENT NAV LAYOUT HERE */
-    // .header_nav_menu-item {
-    //     border: solid 1px orange;
-    // }
     .list_block {
         flex-grow: 1;
         min-width: 46%;
@@ -55,9 +54,19 @@
             margin: 20px 0 0 0;
         }
     }
-
-
     
+    .volunteer {
+        .contribute-info {
+            display: inline-block;
+            width: 50%;
+        }
+        .image--volunteer {
+            display: inline-block;
+            width: 40%;
+            margin-left: 35px;
+            vertical-align: top;
+        }
+    }
 
 }
 
@@ -65,32 +74,4 @@
     .list_block {
         min-width: 100%;
     }
-}
-
-
-//  ===== OLD =====
-
-
-
-@media (max-width: 1130px) {
-    .carousel-control {
-        display: none;
-    }
-}
-
-
-
-
-
-@media (max-width: 625px) {
-
-}
-
-
-@media (max-width: 455px) {
-
-}
-
-@media (max-width: 300px) {
-
 }
