--- a/layouts/contribute/list.html
+++ b/layouts/contribute/list.html
@@ -3,44 +3,37 @@
 <!-- CONTRIBUTE SINGLE PAGE (Design based on Single template, functions as List)-->
 <!-- Nav, Social, and Header pic are in baseof -->
 
-<section class="sidebar support">    
+<section class="page-copy support">
+    <div class="triangle triangle-corner"></div>    
+    <h1>{{.Params.title}}</h1>
+
+    {{range where .Site.Pages ".Params.section" "primary"}}
+        <div class="page-copy_content donate_container">            
+            <div class="donate_info">
+                <h2>{{.Title}}</h2>
+                <div>{{.Content}}</div>
+            </div> 
+            {{ if eq .Params.donorType "monthly"}}
+            {{ partial "donate-form_monthly" .}}
+            {{ else if eq .Params.donorType "one-time"}}
+            {{ partial "donate-form_one-time" .}}
+            {{ end }}
+        </div>
+    {{end}}
+
+</section>
+
+<section class="sidebar volunteer">    
 
         {{range where .Pages ".Params.type" "volunteer"}} 
             <h1>{{.Title}}</h1>  
             <div class="contribute-info">
                 {{.Content}}
             </div>
-            <img src="{{.Params.image}}" >
+            <img class="image--volunteer" src="{{.Params.image}}" >
         {{end}}
-
         <p class="non-profit-info">{{.Site.Data.orgInfo.nonprofit }}</p>
 
-
-</section>
-
-<section class="page-copy support">
-<div class="triangle triangle-corner"></div>
-    
-    <h1>{{.Params.title}}</h1>
-
-    {{range where .Site.Pages ".Params.section" "primary"}}
-
-    <div class="page-copy_content donate_container">
-         
-        <div class="donate_info">
-            <h2>{{.Title}}</h2>
-            <div>{{.Content}}</div>
-        </div> 
-        {{ if eq .Params.donorType "monthly"}}
-         {{ partial "donate-form_monthly" .}}
-         {{ else if eq .Params.donorType "one-time"}}
-         {{ partial "donate-form_one-time" .}}
-        {{ end }}
-    </div>
-    {{end}}
-
-
-    
 </section>
 
 {{end}}
