--- a/assets/sass/pages/_list.scss
+++ b/assets/sass/pages/_list.scss
@@ -32,7 +32,7 @@
     padding: 5px 10px;
     font-size: 22px;
     clear: both;
-} 
+}
 
 
 .listings {
@@ -43,8 +43,7 @@
 
 .flex-wrapper {
     margin: 0 auto;
-    width: 100%; 
-    // grid-area: flex-wrapper;
+    width: 100%;
     display: flex;
     flex-flow: row wrap;
     align-items: stretch;
@@ -65,7 +64,8 @@
 }
 
 
-.project-listing, .artist-listing {
+.project-listing,
+.artist-listing {
     padding: 20px 10px 0 20px;
     background: $beige;
 }
@@ -99,7 +99,7 @@
 .artist-pic {
     max-width: 95%;
     margin-bottom: 10px;
-} 
+}
 
 
 .artist-name {
@@ -115,8 +115,3 @@
     margin: 10px 0;
     width: 95%;
 }
-
-
-
-
-
