--- a/assets/sass/pages/_residency.scss
+++ b/assets/sass/pages/_residency.scss
@@ -1,26 +1,35 @@
+.grid--residency {
+    grid-template-columns: 60% auto;
+    grid-template-rows: auto 400px auto;
+    grid-gap: 35px;
+    grid-template-areas:
+        "header header"
+        "primary sidebar"
+        "primary image";
+}
+
 .residency_menu {
-
-    // h1 {
-    //     font-size: 24px;
-    //     margin-top: 35px;
-    // }
-
+    .residency_menu_container {
+        display: inline-block;
+        // border: solid 1px purple;
+    }
     p {
         font-size: 18px;
         color: $lightblue;
     }
-
     ul {
         list-style: none;
         font-size: 18px;
         line-height: 1.5;
         padding-left: 5px;
+        // border: solid 1px lawngreen;
     }
+}
 
+.residency-pic {
+    grid-area: image;        
     img {
-        // max-width: 425px;
         width: 100%;
-        margin-top: 15px;
     }
 }
 
@@ -44,10 +53,6 @@
         font-weight: 400;
         color: $darkblue;
     }
-    
-    // p {
-    //     margin: 15px 0 0 0;
-    // }
 
     ol {
         padding-left: 15px;
