--- a/layouts/partials/to-top.html
+++ b/layouts/partials/to-top.html
@@ -1,4 +1,4 @@
 
-<button onclick="topFunction()" id="myBtn" title="Go to top" class="to-top">
+<button onclick="topFunction()" id="toTopBtn" title="Go to top" class="to-top">
     <div class="triangle"></div>
 </button>
