--- a/assets/sass/_media-queries.scss
+++ b/assets/sass/_media-queries.scss
@@ -1,5 +1,15 @@
 /* ===== MEDIA QUERIES ===== */
 
+
+@media (min-width: 1500px) {
+    .page-container {
+        .to-top {
+            margin-right: calc(((100vw - 1500px) / 2) - 5px);
+        }
+    }
+
+}
+
 @media (max-width: 1300px) {
     .page-container--home {
         .sidebar {
@@ -55,9 +65,10 @@
                 "sidebar"
                 "primary"
                 "image";
+            .page-copy {
+                margin-top: -20px;
+            }
         }
-
-
         .preview_link-more {
             float: none;
             display: inline-block;
@@ -91,6 +102,16 @@
     .clear-button {
         left: 80%;
     }
+
+    .residency_menu_container ul {
+        margin: 5px 0 0 0;
+    }
+    .page-container {
+        .to-top {
+            transform: scale(0.8);
+            right: 0;
+        }
+    }
 }
 
 @media (max-width: 700px) {
@@ -99,5 +120,15 @@
     }
     .block_date-filter {
         padding-bottom: 30px;
+    }
+}
+
+@media (max-width: 600px) {
+    .page-container {
+        .to-top {
+            transform: scale(0.7);
+            right: 0;
+            bottom: 0;
+        }
     }
 }
