--- a/assets/sass/pages/_residency.scss
+++ b/assets/sass/pages/_residency.scss
@@ -1,6 +1,6 @@
 .grid--residency {
     grid-template-columns: 60% auto;
-    grid-template-rows: auto 400px auto;
+    grid-template-rows: auto 265px auto;
     grid-gap: 35px;
     grid-template-areas:
         "header header"
@@ -11,18 +11,17 @@
 .residency_menu {
     .residency_menu_container {
         display: inline-block;
-        // border: solid 1px purple;
     }
     p {
         font-size: 18px;
         color: $lightblue;
     }
     ul {
+        columns: 2;
         list-style: none;
         font-size: 18px;
         line-height: 1.5;
         padding-left: 5px;
-        // border: solid 1px lawngreen;
     }
 }
 
@@ -33,12 +32,12 @@
     }
 }
 
-.link_residency-gallery {
+.link_residency-page {
     display: inline-block;
     width: 99%;
     text-align: right;
     margin-top: 5px;
-    font-size: 14px;
+    font-size: 15px;
 }
 
 .residency-copy {
@@ -57,4 +56,11 @@
     ol {
         padding-left: 15px;
     }
+}
+
+#page-position {
+    position: absolute;
+    z-index: -1;
+    left: 0;
+    margin-top: -300px;
 }
