--- a/assets/sass/components/_date-filter.scss
+++ b/assets/sass/components/_date-filter.scss
@@ -118,11 +118,13 @@
     display: none;
     font-size: 20px;
     font-weight: 700;
-    color: $orange;
+    background: $orange;
+    color: #fff;
     text-align: center;
     width: 160px;
+    height: 26px;
+    border-radius: 4px;
     margin: 0 auto;
-    border: solid 1px red;
     position: relative;
     top: -25px;
 }
